Created array of quotes/lyrics, started writing mysql database

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,51 @@
 
   <body>
 
-    <div class="jumbotron">
-      <h1>Hangman</h1>
-      <p>Guess the quote before you run out of guesses</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Start Game</a></p>
+    <div class="container">
+
+      <div class="jumbotron">
+        <h1>Hangman</h1>
+        <p>Guess the quote before you run out of guesses</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Start Game</a></p>
+      </div>
+
     </div>
+
+    <div class="container">
+
+    <h2>Type: </h2>
+    <br><br>
+
+    <div id="word">
+      <p></p>
+
+    </div>
+
+    <div id="wrong">
+      <strong>Wrong Guesses: </strong>
+      <br><br>
+
+    </div>
+
+    <div id="guesses">
+      <strong>Guesses Left: </strong>
+    </div>
+    <br><br>
+
+    <div id="total">
+      <strong>Total Score: </strong>
+    </div>
+    <br><br>
+
+    <div class= "scores">
+          <div id="highscore"><strong>Highscore</strong<></div>
+    </div>
+
+    </div>
+
+
+
+
 
 
 
