Checks if letter is in word

--- a/public/index.html
+++ b/public/index.html
@@ -22,41 +22,41 @@
       <div class="jumbotron">
         <h1>Hangman</h1>
         <p>Guess the quote before you run out of guesses</p>
-        <a class="btn btn-primary btn-lg" id= "start"href="#" role="button">Start Game</a>
+        <a class="btn btn-primary btn-lg" id="start" href="#" role="button">Start Game</a>
       </div>
 
     </div>
 
     <div class="game">
 
-      <h2 id = 'movie'>Movie: </h2>
+      <h2 id='movie'>Movie: </h2>
       <br><br>
 
       <div id="word">
-        <p>_ _ _ _ _ _ _ _ _ _ _</p>
-      <br><br><br>
+        <p id = "wordGoesHere">_ _ _ _ _ _ _ _ _ _ _</p>
+        <br><br><br>
 
       </div>
 
-    <!--<div id = "displayHint">
+      <!--<div id = "displayHint">
       <a class="btn btn-primary btn-lg" id ="hint" href="#" role="button">Hint</a>
       <h3></h3>
       <br><br><br>     
 
     </div>-->
 
-      <div class= "guesses">
+      <div class="guesses">
 
-      <div id="wrong">
-        <strong>Wrong Guesses: </strong>
+        <div id="wrong">
+          <strong>Wrong Guesses: </strong>
+          <br><br>
+
+        </div>
+
+        <div id="guessesLeft">
+          <strong>Guesses Left: </strong>
+        </div>
         <br><br>
-
-      </div>
-
-      <div id="guessesLeft">
-        <strong>Guesses Left: </strong>
-      </div>
-      <br><br>
 
       </div>
 
@@ -66,7 +66,7 @@
       <br><br>
 
       <div class="scores">
-        <a class="btn btn-primary btn-lg" id ="score" href="#" role="button">Display Highscore</a>
+        <a class="btn btn-primary btn-lg" id="score" href="#" role="button">Display Highscore</a>
         <br><br>
         <div id="highscore"><strong>Highscore: </strong<></div>
     </div>
