--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div id="guessesLeft">
-          <strong>Guesses Left: </strong>
+          <strong>Guesses Left: <span id ="numGuesses"></span></span></strong>
         </div>
         <br><br>
 
@@ -68,7 +68,7 @@
       <div class="scores">
         <a class="btn btn-primary btn-lg" id="score" href="#" role="button">Display Highscore</a>
         <br><br>
-        <div id="highscore"><strong>Highscore: </strong<></div>
+        <div id="highScore"><strong>Highscore: </strong<></div>
     </div>
 
     </div> 
@@ -79,6 +79,7 @@
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 
   <!-- Javascript -->
-  <script type="text/javascript" src="assets/javascript/logic.js"></script>
+  <!--<script type="text/javascript" src="assets/javascript/logic.js"></script>-->
+   <script type="text/javascript" src="../models/hangman.js"></script>
 
   </html>
