--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <br><br>
 
       <div id="word">
-        <p id = "wordGoesHere">_ _ _ _ _ _ _ _ _ _ _</p>
+        <p id="wordGoesHere">_ _ _ _ _ _ _ _ _ _ _</p>
         <br><br><br>
 
       </div>
@@ -54,7 +54,7 @@
         </div>
 
         <div id="guessesLeft">
-          <strong>Guesses Left: <span id ="numGuesses"></span></span></strong>
+          <strong>Guesses Left: </strong>
         </div>
         <br><br>
 
@@ -68,7 +68,7 @@
       <div class="scores">
         <a class="btn btn-primary btn-lg" id="score" href="#" role="button">Display Highscore</a>
         <br><br>
-        <div id="highScore"><strong>Highscore: </strong<></div>
+        <div id="highscore"><strong>Highscore: </strong<></div>
     </div>
 
     </div> 
@@ -79,7 +79,6 @@
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 
   <!-- Javascript -->
-  <!--<script type="text/javascript" src="assets/javascript/logic.js"></script>-->
-   <script type="text/javascript" src="../models/hangman.js"></script>
+  <script type="text/javascript" src="assets/javascript/logic.js"></script>
 
   </html>
