Fixed issues with guesses

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <br><br>
 
       <div id="word">
-        <p id="wordGoesHere">_ _ _ _ _ _ _ _ _ _ _</p>
+        <p id="wordGoesHere"></p>
         <br><br><br>
 
       </div>
