Added config file to gitignore

--- a/public/index[Conflict].html
+++ b/public/index[Conflict].html
@@ -33,7 +33,7 @@
       <br><br>
 
       <div id="word">
-        <p id="wordGoesHere"></p>
+        <p id = "wordGoesHere">_ _ _ _ _ _ _ _ _ _ _</p>
         <br><br><br>
 
       </div>
@@ -54,7 +54,7 @@
         </div>
 
         <div id="guessesLeft">
-          <strong>Guesses Left: </strong>
+          <strong>Guesses Left: <span id ="numGuesses"></span></span></strong>
         </div>
         <br><br>
 
@@ -68,7 +68,7 @@
       <div class="scores">
         <a class="btn btn-primary btn-lg" id="score" href="#" role="button">Display Highscore</a>
         <br><br>
-        <div id="highScore">Highscore: </div>
+        <div id="highScore"><strong>Highscore: </strong<></div>
     </div>
 
     </div> 
@@ -80,5 +80,6 @@
 
   <!-- Javascript -->
   <script type="text/javascript" src="assets/javascript/logic.js"></script>
+   <!--<script type="text/javascript" src="../models/hangman.js"></script>-->
 
   </html>
