--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="game">
       <div class="jumbotron">
 
-      <h2 id='movie'>Movie: </h2>
+      <h2 id='movie'>Movie: <span id="movieGoesHere"></span></h2>
       <br><br>
 
       <div id="word">
@@ -50,18 +50,18 @@
       <div class="guesses">
 
         <div id="wrong">
-          <strong>Wrong Guesses: </strong>
+          <strong>Wrong Guesses: <span id = "wrongLetters"</span></strong>
           <br><br>
 
         </div>
 
         <div id="guessesLeft">
-          <strong>Guesses Left: </strong>
+          <strong>Guesses Left: <span id = "numGuesses"</span>10</strong>
         </div>
         <br><br>
 
         <div id="total">
-          <strong>Total Score: </strong>
+          <strong>Total Score: <span id= "scoreGoesHere"</span>0</strong>
         </div>
         <br><br>
 
